--- a/app/styles/_max-540.scss
+++ b/app/styles/_max-540.scss
@@ -614,7 +614,18 @@ $blue-color: #3c4f90;
       width: 100%;			
     }
 
+		//tab_content-2
+
+		.select-wrap {
+
+			.nice-select {
+				width: 100%;
+			}
+		
+		}
+
 	}
+
 
 //END CREATE-PAGE
 
