--- a/app/styles/_max-767.scss
+++ b/app/styles/_max-767.scss
@@ -984,9 +984,14 @@ $blue-color: #3c4f90;
 			float: none;
       padding: 30px;
       width: 350px;
-      margin: 15px auto;
+      margin: 0 auto 30px;
 			
     }
+
+		.button-wrap {
+			margin-top: 20px;
+			margin-bottom: 20px;
+		}
 
   }
 
