--- a/app/styles/_modal.scss
+++ b/app/styles/_modal.scss
@@ -99,6 +99,7 @@ $blue-color: #3c4f90;
 	.description-block {
 		opacity: 0;
 		width: 100%;
+		height: 100%;
 
 		position: absolute;
 		top: 50%;
@@ -126,6 +127,29 @@ $blue-color: #3c4f90;
 		font-weight: 600;
 		color: #fff;
 		text-align: center;
+	}
+
+	.button-wrap {
+		position: absolute;
+		width: 100%;
+		bottom: 15px;
+		left: 0;	
+		display: flex;
+		justify-content: space-between;
+
+		.title-button {
+			font-size: 14px;
+
+			&:first-child {
+			width: 25%;
+			}
+
+			&:last-child {
+				width: 65%;
+			}
+
+		}	
+
 	}
 
 }
