--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -8,7 +8,7 @@ $icon-font-path: '../fonts/';
 @import "_sprite";
 @import "_fonts";
 @import "_components";
-//@import "_animate";
+@import "_animate";
 @import "_slick";
 @import "_slick-theme";
 @import "_nice-select";
