size button dev

--- a/app/styles/_max-540.scss
+++ b/app/styles/_max-540.scss
@@ -519,9 +519,9 @@ $blue-color: #3c4f90;
 			width: 100%;
 			order: 2;	
 			margin-top: 20px;
-			webkit-box-shadow: inset 0px 50px 50px -14px rgba(241,241,241,1);
-			-moz-box-shadow: inset 0px 50px 50px -14px rgba(241,241,241,1);
-			box-shadow: inset 0px 50px 50px -14px rgba(241,241,241,1);
+			//webkit-box-shadow: inset 0px 50px 50px -14px rgba(241,241,241,1);
+			//-moz-box-shadow: inset 0px 50px 50px -14px rgba(241,241,241,1);
+			//box-shadow: inset 0px 50px 50px -14px rgba(241,241,241,1);
 			background: linear-gradient(to top, #f9f2f2, #fff8f8);		
 		}
 
