--- a/app/styles/_create-page.scss
+++ b/app/styles/_create-page.scss
@@ -119,7 +119,7 @@ $blue-color: #3c4f90;
 		width: 100%;
 		border-radius: 3px;
 		border: 1px solid $border-color;
-		padding: 18px;
+		padding: 0 18px;
 		height: 44px;
 		font-weight: 400;
 		font-size: 15px;
