--- a/app/styles/_header.scss
+++ b/app/styles/_header.scss
@@ -8,212 +8,5 @@ $blue-color: #3c4f90;
 
 
 .header {
-	color: #8a8a8a;
-	background: #fff;
-	width: 100%;
-	position: fixed;
-	top: 0;
-	//left: 0;
-	z-index: 100;	
-
-	.container {
-		position: relative;
-	}
-
-	.header-top-block {
-		padding: 20px 0;
-		border-bottom: 1px solid #f2f2f2;
-	}
-
-	.header-bottom-block {
-		border-bottom: 1px solid #f2f2f2;	
-	}
-
-	.search-form {
-		float: left;
-		::-webkit-input-placeholder {color: #8a8a8a; font-size: 16px;}
-		::-moz-placeholder          {color: #8a8a8a; font-size: 16px;}/* Firefox 19+ */
-		:-moz-placeholder           {color: #8a8a8a; font-size: 16px;}/* Firefox 18- */
-		:-ms-input-placeholder      {color: #8a8a8a; font-size: 16px;}
-	}	
-
-	.search {
-		border: none;
-		background:  #f2f8f9;
-		font-size: 16px;
-		font-weight: 400;
-		color: $page-color;
-		padding: 9px 14px;
-		border-radius: 5px;		
-	}
-
-	.net-block {
-		float: left;		
-		padding: 8px 0;
-
-		li {
-			display: inline-block;
-			margin: 0 5px;
-			vertical-align: middle;
-		}
-
-	}
-
-	.icon-insta-head {
-		background-image: url(../images/icon-insta-head.svg);
-		background-repeat: no-repeat;
-		background-position: 100% 100%;
-		background-size: cover;		
-		width: 20px;
-		height: 20px;
-
-		&:hover {
-			background-image: url(../images/icon-insta-head-hover.svg);
-		}
-	}
-
-	.icon-vk-head {
-		background-image: url(../images/icon-vk-head.svg);
-		background-size: cover;
-		background-repeat: no-repeat;
-		background-position: 100% 100%;
-		width: 20px;
-		height: 20px;
-
-		&:hover {
-			background-image: url(../images/icon-vk-head-hover.svg);
-		}
-	}
-
-	.icon-fb-head {
-		background-image: url(../images/icon-fb-head.svg);
-		background-size: cover;
-		background-repeat: no-repeat;
-		background-position: 100% 100%;
-		width: 20px;
-		height: 20px;
-
-		&:hover {
-			background-image: url(../images/icon-fb-head-hover.svg);
-		}
-	}
-
-	.header-center-column {
-		text-align: center;
-	}
-
-	.logo {
-		display: inline-block;
-		padding: 2px 0;
-		width: 48px;
-		height: 30px;
-
-		img {
-		 width: 100%;
-	    height: 100%;
-	    -o-object-fit: cover;
-	    object-fit: cover;
-		}
-	}
-
-	.header-right-column {
-		float: right;
-	}
-
-	.phone {
-		display: inline-block;
-		float: right;
-		font-size: 16px;
-		font-weight: 400;
-		color: #8a8a8a;
-		padding: 8px 0;
-		text-decoration: none;
-	}
-
-	.cart-block {
-		display: inline-block;
-		float: right;
-		text-decoration: none;
-		margin-left: 25px;
-		padding: 7px 0;
-		cursor: pointer;
-	}
-
-	.cart-title {
-		display: inline-block;
-		font-size: 14px;
-		font-weight: 400;
-		color: #fff;
-		background: #7f73d2;
-		padding: 2px 0;
-		border-radius: 50%;
-		min-width: 22px;
-		height: 22px;
-		text-align: center;
-		vertical-align: middle;
-	}
-
-	//nav
-
-	.navigation {
-
-		ul {
-			width: 100%;
-			text-align: justify;
-			height: 50px;
-
-			&:after {
-				content: "";
-				display: inline-block;
-				width: 100%;
-				//height: 100%;
-			}
-
-			li {
-				display: inline-block;
-				height: 100%;
-				vertical-align: middle;
-
-				&.active {
-					
-					a {
-						text-decoration: none;
-						color: #2e4288;
-					}
-						
-				}
-				
-
-				a {					
-					color: #8a8a8a;
-					font-weight: 600;
-					text-decoration: none;
-					display: inline-block;
-					height: 100%;
-					line-height: 3.5em;
-					vertical-align: middle;
-
-					&:hover	{
-						text-decoration: none;
-						color: #2e4288;
-					}
-
-					
-				}
-
-			}
-
-		}
-
-	}
-
-	.page-name {
-		font-size: 18px;
-		font-weight: 600;
-		color: #9f64a7;
-		margin-top: 7px;		
-		margin-left: 40px;
-    	text-align: left;
-	}
-
+    margin-bottom: -132px;
 }
