--- a/app/styles/_components.scss
+++ b/app/styles/_components.scss
@@ -12,25 +12,29 @@ html {
 }
 
 body {
-	font-family: 'ApercuPro';
+	
 	font-weight: 400;
-	background: #fff;
-	//padding-right: 0 !important;
-	//overflow-x: hidden; 	
+	background: #fff;	
 	min-width: 320px;
 	height: 100%;	
 }
 
 .hidden {
-opacity:0;
+	opacity:0;
 }
 
 .visible {
-opacity:1;
+	opacity:1;
 }
 
-.main {
-	min-height: 100%;
+ .main {
+   min-height: 100%;
+   padding-top: 132px;
+   padding-bottom: 270px;
+  }
+
+.content {
+	margin: 30px auto;
 }
 
 .icon {
@@ -60,753 +64,4 @@ opacity:1;
 	}
 
 }
-
-.title {
-	font-size: 24px;
-	font-weight: 600;
-	color: #fff;
-	text-align: center;
-	line-height: 1.2em;
-}
-
-.title-img-block {
-	height: 150px;
-	overflow: hidden;
-	position: relative;
-
-	.img-wrap {
-		width: 100%;
-		height: 100%;
-	}
-
-}
-
-.title-description {
-	color: #fff;
-	text-align: center;
-	font-size: 16px;
-	font-weight: 600;
-	margin-top: 21px;
-}
-
-.content {
-	padding: 3.6rem 0;
-}
-
-.content-title {
-	font-size: 16px;
-	font-weight: 700;
-	color: #727272;
-	text-align: center;
-	text-transform: uppercase;
-	letter-spacing: 2px;
-
-	&:after {
-		content: "";
-		display: block;
-		margin: 37px auto 0;
-		width: 73px;
-		height: 2px;
-		background: #727272;
-	}
-
-}
-
-.info-title {
-		text-transform: uppercase;
-		color: #2e4288;
-		font-size: 13px;
-		font-weight: 700;
-		letter-spacing: 1px;	
-	}
-
-
-//feedback-block
-
-	.feedback-block {
-		background: #fff8f8;
-	
-
-		.slider-content {
-			margin-top: 80px;
-
-			.slick-dots {
-				bottom: -80px;
-
-				li {
-					width: 9px;
-					height: 9px;
-
-					button {
-
-						&:before {
-							content: "";
-						}
-
-					}
-
-				}
-
-				.slick-active {
-					background: #000;
-				}
-
-			}
-
-		}
-
-		.feedback-item {
-			width: 50%;
-			text-align: left;		
-
-			.img-wrap {
-				width: 140px;
-				height: 140px;
-				border-radius: 3px;
-				overflow: hidden;					
-
-				img {
-					width: 100%;	
-					border-radius: 3px;			 
-				}
-
-			}
-
-		}
-
-		.feedback-left-block {
-			display: inline-block;
-			vertical-align: top;
-			text-align: left;
-
-			.user-name {
-				display: none;
-			}
-
-		}
-
-		.feedback-link {
-			display: inline-block;
-			font-size: 14px;
-			font-weight: 700;
-			color: #426995;
-			text-decoration: underline;
-			margin-top: 15px;
-
-			&:hover,
-			&:focus,
-			&:active {
-				color: #426995;
-				text-decoration: none;
-			}
-
-		}
-
-		.feedback-right-block {
-			display: inline-block;		
-			margin-left: -20px;
-			text-align: left;
-		}
-
-		.user-name {
-			color: #727272;
-			font-size: 16px;
-			font-weight: 600;
-			margin: 12px auto 12px 30px;
-		}
-
-		.feedback-text-wrap {
-			padding: 0 18px;
-			border-bottom: 13px solid #fff;
-			border-top: 13px solid #fff;
-			background: #fff;
-			max-width: 330px;
-			height: 200px;
-			//overflow-y: scroll;  		
-			border-radius: 5px;		
-		}
-
-		.feedback-text {
-			color: $page-color;
-			font-size: 14px;
-			font-weight: 400;
-			line-height: 1.5em;
-			
-		}
-
-	}	
-
-	//end feedback-block
-
-.breadcrumb-list {
-	margin-bottom: 30px;
-	position: relative;
-	z-index: 10;
-
-	 li {
-	 		float: left;
-
-		 	a {
-				font-size: 16px;
-				font-weight: 600;
-				color: #9c9c9c;
-		 	}
-
-		 	&:after {
-		 		content: ">";
-		 		font-size: 16px;
-				font-weight: 600;
-				color: #9c9c9c;
-				margin: 0 10px;
-				display: inline-block;
-		 	}
-
-		 	&:last-child {
-
-		 		&:after {
-		 			content: "";
-		 		}
-
-		 	}
-
-	 }
-
-}
-
-//main-slider
-
-.slider-wrap {
-		width: 100%;
-		height: 320px;
-		overflow: hidden;
-		position: relative;
-
-		.slick-dots {
-			text-align: center;
-			bottom: 15px;		
-
-		li {
-			display: inline-block;
-			width: 13px;
-			height: 13px;
-			background: #b5b5b3;
-			border-radius: 50%;
-			list-style: none;			
-
-			button {
-
-				&:before {
-					content: "";
-				}
-				
-			}
-
-		}
-
-			.slick-active {
-				background: #fff;
-			}
-
-		}
-
-	}
-
-	.slider-center-block {
-		position: absolute;
-		top: 50%;
-		left: 50%;
-		transform: translate(-50%, -50%);
-		z-index: 10;
-		text-align: center;
-	}
-	
-
-	//slider
-
-	.head-slider {
-		height: 100%;
-	}
-
-	.slick-list {
-		height: 100%;
-	}
-
-	.slick-track {
-		height: 100%;
-	}
-
-	.head-slider-item {
-		height: 100%;
-
-		img {
-			width: 100%;
-			height: 100%;
-			 -o-object-fit: cover;
-    	object-fit: cover;
-		}
-
-	}
-
-	.slick-dots {
-		text-align: center;
-		bottom: 15px;		
-
-		li {
-			display: inline-block;
-			width: 13px;
-			height: 13px;
-			background: #b5b5b3;
-			border-radius: 50%;
-			list-style: none;			
-
-			button {
-
-				&:before {
-					content: "";
-				}
-				
-			}
-
-		}
-
-		.slick-active {
-			background: #fff;
-		}
-
-	}
-
-//end main slider
-
-
-.content-list {
-		display: flex;		
-		align-items: center;
-		flex-wrap: wrap;
-}
-
-.content-item {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-}
-
-
-.button-wrap {
-	text-align: center;
-}
-
-//прозрачная кнопка
-
-.title-button {
-		color: #fff;
-		text-decoration: none;
-		font-size: 16px;
-		font-weight: 600;
-		text-align: center;
-		border: 1px solid #fff;
-		border-radius: 3px;
-		background: transparent;
-		display: inline-block;
-		padding: 12px 21px;
-		margin-top: 35px;
-
-		overflow: hidden;
-  		position: relative;
-
-		&:after {
-			background: #fff;
-			content: "";
-			height: 155px;
-			left: -75px;
-			opacity: .2;
-			position: absolute;
-			top: -50px;
-			transform: rotate(35deg);
-			transition: all 550ms cubic-bezier(0.19, 1, 0.22, 1);
-			width: 50px;
-			z-index: -10;
-		}
-
-		&:focus {
-			color: #fff;			
-			text-decoration: none;
-		}
-
-		&:hover {
-			color: #fff;			
-			text-decoration: none;
-			transition: background .5s ease;
-
-			 &:after {
-				left: 120%;
-				transition: all 550ms cubic-bezier(0.19, 1, 0.22, 1);
-			}
-		}		
-	}
-
-	.title-button.title-button-color {
-			color: #6674a8;			
-			border: 1px solid #6674a8;			
-
-			&:hover,
-			&:focus,
-			&:active {
-				background:#6674a8;
-				color: #fff; 
-				text-decoration: none;
-				transition: background .5s ease;
-			}
-			
-		} 
-
-	.block-title {
-		font-size: 24px;
-		font-weight: 400;
-		color: #000;
-		text-align: center;
-		letter-spacing: 1px;		
-	}
-
-	//фиолетовая кнопка
-
-	.color-button {
-		background: #8675d0;
-		color: #fff;
-		font-size: 16px;
-		font-weight: 400;
-		height: 45px;
-		text-align: center;
-		vertical-align: middle;
-	}
-
-	.catalog-button {
-		background: #8474d6;
-		display: inline-block;
-		height: 42px;
-		color: #fff;
-		font-size: 16px;
-		font-weight: 700;
-		text-align: center;
-		line-height: 42px;
-		vertical-align: middle;
-		border-radius: 5px;
-
-			&:hover,
-			&:focus,
-			&:active {
-				text-decoration: none;
-				color: #fff;
-				background: rgba(132,116,214,0.8);
-				transition: background .5s ease;
-			}
-
-			i {
-				vertical-align: middle;
-			}
-	}
-
-	//catalog block
-
-		.catalog-block {
-		//margin-top: 30px;
-		margin-left: -15px;
-		margin-right: -15px;
-
-		.img-wrap {
-			width: 100%;
-			overflow: hidden;
-			border-radius: 5px;
-			height: 200px;
-			max-height: 200px;
-
-			img {				
-				border-radius: 5px;
-			}
-
-		}	
-	
-	.catalog-item {
-		margin-bottom: 30px;
-	}	
-
-		.info-block {
-			margin-top: 7px;
-
-			a {
-				text-decoration: none;
-				
-				&:hover,
-				&:focus,
-				&:active {
-					text-decoration: none;
-				}
-
-			}
-
-		}
-
-		.art {
-			display: block;
-			font-size: 14px;
-			color: #838282;
-			font-weight: 600;
-
-		}
-
-		.name {
-			display: block;
-			font-size: 16px;
-			font-weight: 600;
-			color: $page-color;
-			margin: 8px auto 7px 0;
-			height: 20px;
-			overflow: hidden;
-			text-overflow: ellipsis;
-			white-space: nowrap;
-		}
-
-		.price {
-			display: block;
-			font-size: 16px;
-			font-weight: 600;
-			color: $page-color;
-		}
-
-	
-
-	.catalog-button {
-		width: 100%;
-		border-radius: 3px;
-		margin-top: 15px;
-	}
-
-	.icon-button {
-		margin-right: 16px;
-	}
-
-}
-
-
-.paging {
-	text-align: center;
-
-	li {
-		display: inline-block;
-		cursor: pointer;
-		border: 1px solid #8474d6;
-		background: transparent;
-		color: #8474d6;
-		font-size: 16px;
-		font-weight: 400;
-		width: 40px;
-		height: 40px;
-		border-radius: 3px;
-		text-align: center;
-		vertical-align: middle;
-		padding: 10px 0;
-
-		a {
-				font-size: 16px;
-				color: #000;
-				text-decoration: none;
-
-				&:hover,
-				&:focus,
-				&:active {
-					text-decoration: none;
-					background: transparent;
-					color: #000;
-				}
-
-			}				
-
-		&:hover {
-			background: #8474d6;
-			color: #fff;
-			transition: background .5s ease;
-		}
-
-	}
-
-	.page-active {
-		background: #8474d6;
-		color: #fff;
-	}
-
-}
-
-.content-item,
-.press-item {
-		display: block;
-		height: auto;
-		margin: 0 15px 30px;
-
-		.all-news-link {
-			display: inline-block;
-			color: #426995;			
-			font-size: 14px;
-			font-weight: 600;
-			text-decoration: none;
-			position: absolute;
-			bottom: 0;
-			right: 0;
-			width: 100px;
-	    height: 22px;	    
-	    text-decoration: underline;
-
-			&:after {
-				content: ">>";
-				display: inline-block;
-				color: #426995;				
-				font-size: 14px;
-				font-weight: 600;
-				padding-left: 5px;
-			}
-
-			&:hover,
-			&:focus,
-			&:active {
-				color: #426995;	
-				text-decoration: none;
-			}
-
-		}		
-
-	}
-
-	.news-text {
-		font-size: 14px;
-		font-weight: 600;
-		color: $gray-color;
-		line-height: 1.5em;
-		height: 100px;
-		overflow: hidden;		
-		position: relative;
-
-		span {
-			position: absolute;
-			width: 22px;			
-			height: 22px;
-			right: 100px;
-			bottom: 0;
-		}
-
-	}
-
-	.counter-list {
-		
-			.counter-item {
-			display: inline-block;			
-
-			&:last-child {
-				margin-right: 0;
-			}
-
-		}
-
-		.counter-wrap {
-			width: 130px;
-			border: 1px solid $border-color;
-			height: 42px;
-			text-align: center;
-			vertical-align: middle;
-			font-size: 13px;
-			
-
-			a {
-				display: inline-block;
-				cursor: pointer;
-				width: 40px;
-				height: 100%;
-				color: #426995;
-				padding: 11px 0;
-				font-weight: 700;
-
-				&:hover {
-					text-decoration: none;
-					color: #426995;
-				}
-
-			}
-
-		}
-
-		.left-btn {
-			border-right: 1px solid $border-color;
-			float: left;
-		}
-
-		.right-btn {
-			border-left: 1px solid $border-color;
-			float: right;
-		}
-
-		.counter {
-			display: inline-block;
-			height: 100%;
-			color: #426995;
-			padding: 11px 0;
-			font-weight: 700;
-		}
-
-	}
-
-	.price-value {
-		font-size: 20px;
-		font-weight: 400;
-		color: $page-color;	
-	}
-
-	.cathegory-button {
-		background: #fff;
-    display: inline-block;
-    height: 32px;
-    color: #8474d6;
-		border: 1px solid #8474d6;
-    font-size: 14px;
-    font-weight: 700;
-    text-align: center;
-    line-height: 32px;
-    vertical-align: middle;
-    border-radius: 3px;
-
-		&:hover,
-		&:focus,
-		&:active {
-			transition: background .5s ease;
-			text-decoration: none;
-			background: #8474d6;
-			color: #fff;
-		}
-		
-	}
-
-	.create-button {
-		display: inline-block;
-		font-size: 16px;
-		padding: 0 15px;
-		color: #8474d6;
-		border: 1px solid #8474d6;
-		background: transparent;
-		height: 44px;
-		line-height: 44px;
-		border-radius: 3px;
-		text-align: center;
-
-		&:hover,
-		&:focus	{
-			background: #8474d6;
-			color: #fff;
-			text-decoration: none;
-			transition: background .5s ease;
-		}	 
-	
-	}
-
-
-
-
-
-
-
 
