--- a/app/styles/_footer.scss
+++ b/app/styles/_footer.scss
@@ -7,132 +7,8 @@ $black-color: #111111;
 $blue-color: #3c4f90;
 
 
-.footer {
-	background: #2b2727;	
-
-	.footer-title {
-		font-size: 16px;
-		font-weight: 600;
-		color: #fff;
-		margin-bottom: 28px;
-	}
-
-	.tab_content-list {
-
-		li {
-			margin-bottom: 5px;
-
-			&:last-child {
-				margin-bottom: 0;
-			}
-
-			a {
-				display: inline-block;
-				font-size: 14px;
-				color: #b4adad;
-
-				&:hover,
-				&:focus,
-				&:active {
-					color: #b4adad;
-					text-decoration: underline;
-				}
-
-			}
-
-		}
-		
-	}
-
-	.footer-button {
-				display: inline-block;
-				color: #fff;
-				font-size: 14px;
-				font-weight: 600;
-				background: #433c3c;
-				padding: 8px 0;				
-				width: 133px;
-				text-align: center;
-				border-radius: 3px;
-
-			&:hover,
-			&:focus,
-			&:active {
-				color: #fff;
-				background: rgba(67, 60, 60, 0.8);
-				text-decoration: none !important;
-		}
-
-	}	
-
-	
-	.footer-net-list {
-		text-align: justify;
-		padding-top: 10px;
-		width: 133px;
-
-		&:after {
-			content: "";
-			display: inline-block;
-			width: 100%
-		}
-
-	 	li {
-	 		display: inline-block;
-	 		margin-bottom: 0;	 		
-
-		 	a {
-				display: inline-block;
-		 	}
-
-	 	}
-
-	}
-
-	.icon-viber-footer {
-		background-image: url(../images/icon-viber-footer.svg);
-		background-size: cover;
-		background-repeat: no-repeat;
-		background-position: 100% 100%;
-		width: 20px;
-		height: 20px;
-	}
-
-	.icon-tel-footer {
-		background-image: url(../images/icon-tel-footer.svg);
-		background-size: cover;
-		background-repeat: no-repeat;
-		background-position: 100% 100%;
-		width: 20px;
-		height: 20px;
-	}
-
-	.icon-insta-footer {
-		background-image: url(../images/icon-insta-footer.svg);
-		background-size: cover;
-		background-repeat: no-repeat;
-		background-position: 100% 100%;
-		width: 20px;
-		height: 20px;
-	}
-
-	.icon-vk-footer {
-		background-image: url(../images/icon-vk-footer.svg);
-		background-size: cover;
-		background-repeat: no-repeat;
-		background-position: 100% 100%;
-		width: 20px;
-		height: 20px;
-	}
-
-	.icon-fb-footer {
-		background-image: url(../images/icon-fb-footer.svg);
-		background-size: cover;
-		background-repeat: no-repeat;
-		background-position: 100% 100%;
-		width: 20px;
-		height: 20px;
-	}
+.footer {    
+    margin-top: -270px;
 	
 }
 
