--- a/app/styles/_page.scss
+++ b/app/styles/_page.scss
@@ -20,6 +20,10 @@ body {
 	height: 100%;	
 }
 
+* {
+	box-sizing: border-box;
+}
+
 .hidden {
 	opacity:0;
 }
@@ -33,17 +37,41 @@ body {
 }
 
 .container {
-	max-width: 865px;
+	max-width: 1040px;
 	margin: 0 auto;
+	position: relative;
+	z-index: 5;
+}
+
+.flex-container {
+	display: flex;
+	flex-direction: column;
+	height: 100%;
+	justify-content: space-between;
+	padding: 30px 0;
+	align-items: center;
 }
 
 .content {
+
+	&__right {
+		max-width: 540px;
+		margin: 0 40px 0 auto;
+	}
+
+		&__left {
+		max-width: 540px;
+		margin: 0 auto 0 0;
+	}
 	
 }
 
 .icon {
 	vertical-align: top;
 	display: inline-block;
+	background-size: contain;
+	margin-bottom: 135px;
+	height: 182px;
 }
 
 .clearfix {
@@ -72,23 +100,112 @@ body {
   transition: all .4s ease 0s;
 }
 
-.mt-130 {
-	margin-top: 130px;
+.mt-30 {
+	margin-top: 30px;
 }
 
-.mb-130 {
-	margin-bottom: 130px;
+.mb-30 {
+	margin-bottom: 30px;
 }
+
+.nav-buttons {
+
+	&__list {
+		width: 22px;
+		height: 260px;
+		position: fixed;
+		right: 88px;
+		top: 50%;
+		margin-top: -130px;
+		z-index: 5;
+
+		display: flex;
+		flex-direction: column;
+		justify-content: space-between;
+	}
+
+	&__item {
+		width: 100%;
+		height: 22px;
+		border: 4px solid #fff;
+		border-radius: 50%;
+
+		a {
+			display: inline-block;
+			width: 100%;
+			height: 100%;
+		}
+
+			&.button-active {
+			background: #ff0000;		
+		}			
+	}
+}
+
+.title {	 
+	font-size: 100px;
+	font-weight: 700;
+	text-align: center;
+	margin-bottom: 20px;
+
+	&__md {
+	font-size: 80px;
+	font-weight: 700;
+	text-align: center;
+	margin-bottom: 20px;
+	}
+
+	&__sm {
+	font-size: 60px;
+	font-weight: 700;
+	text-align: center;
+	margin-bottom: 20px;
+	}
+}
+
+.text {
+	font-size: 26px;
+	font-weight: 100;
+	text-align: center;
+	margin-top: 10px;
+	margin-bottom: 10px;
+
+	&__lg {
+		font-size: 44px;
+		font-weight: 700;
+	}
+
+	&__italic {
+		font-style: italic;
+		font-size: 24px;
+		font-weight: 100;
+		line-height: 1.5em;
+	}
+
+	&__link {
+		color: #fff;
+		text-decoration: underline;
+
+		&:hover {
+			text-decoration: none;
+		}
+	}
+}
+
 
 
 //page
 
-.nav {
+//section-1
+
+.nav {	
 
 	 &__list {
 		display: flex;
 		align-items: center;
-		justify-content: center;
+		justify-content: space-between;
+		max-width: 575px;
+		margin: 0 auto;
 	 }
 
 	 &__item {
@@ -124,13 +241,7 @@ body {
 
 .logo-wrap {
 	text-align: center;
-	margin: 60px auto;
-}
-
-.title {	 
-	font-size: 100px;
-	font-weight: 700;
-	text-align: center;
+	margin: 0 auto;
 }
 
 .button-wrap {
@@ -150,6 +261,10 @@ body {
 
 	&:hover {
 		background: linear-gradient(to right, #fd613f, #bf3144);
+	}
+
+	&.white-button {
+		color: #fff;
 	}
 }
 
@@ -188,6 +303,179 @@ body {
 		}
 	}
 }
+
+.pause-button {
+	position: absolute;
+	bottom: 20px;
+	left: 50px;
+	font-size: 20px;
+	width: auto;
+}
+
+
+//section-2
+
+.section-2 {
+	background: url(../images/section-2-bg.jpg) no-repeat;
+	background-size: cover;
+}
+
+
+
+.subtitle {
+	font-size: 34px;
+	font-weight: 700;
+	text-align: center;
+
+	display: flex;
+	align-items: center;
+
+	&:before {
+		content:"-";
+		display: inline-block;
+		font-weight: 700;
+		padding-right: 3px;
+	}
+
+	&:after {
+		content:"-";
+		display: inline-block;
+		font-weight: 700;
+		padding-left: 3px;
+	}
+}
+
+//section-3
+
+.section-3 {
+	background: #3b3535;
+}
+
+.dohots {
+
+	&__list {
+		display: flex;
+		margin: 0 -20px;
+		width: 100%;		
+	}
+
+	&__item {
+		margin: 0 20px;
+		width: calc(25% - 40px);
+		position: relative;		
+	}
+
+	&__label {
+		text-transform: uppercase;
+		font-size: 36px;
+		text-align: center;
+		font-weight: 400;
+	}
+}
+
+.icon-1 {
+	background: url(../images/icon-1.png) no-repeat;
+	width: 100%;		
+	//height: auto;
+	background-size: contain;
+
+}
+
+.icon-2 {
+	background: url(../images/icon-2.png) no-repeat;
+	width: 100%;	
+	//height: auto;
+	background-size: contain;
+	
+}
+
+.icon-3 {
+	background: url(../images/icon-3.png) no-repeat;
+	width: 100%;	
+	//height: auto;
+	background-size: contain;
+	
+}
+
+.icon-4 {
+	background: url(../images/icon-4.png) no-repeat;
+	width: 100%;	
+	//height: auto;
+	background-size: contain;
+	
+}
+
+.timer {
+	font-size: 80px;
+	font-weight: 400;
+	display: inline-block;
+//	margin-top: 170px;
+	position: absolute;	
+	 transform: translateX(-50%);
+	bottom: 50px;
+	left: 50%;
+}
+
+//section-4
+
+.section-4 {
+	background: url(../images/section-4-bg.jpg) no-repeat;
+	background-size: cover;
+}
+
+//section-5
+
+.section-5 {
+		background: #3b3535;
+}
+
+.column {
+
+	&__wrap {
+		display: flex;
+		width: 100%;
+		height: 100%;
+		align-items: center;
+		justify-content: space-between;
+	}
+
+	&__left {
+		width: 325px;
+		flex-basis: 325px;    
+    flex-shrink: 0;
+	}
+
+	&__right {
+		//width: 390px;
+		width: calc(100% - 325px - 150px);
+	}
+}
+
+.img-wrap-border {
+	border: 2px solid #fff;
+	border-radius: 50%;
+	padding: 20px;
+	width: 325px;
+	height: 325px;
+
+	display: flex;
+	align-items: center;
+	justify-content: center;
+
+	img {
+		border-radius: 50%;
+	}
+}
+
+//section-6
+
+.section-6 {
+	background: url(../images/section-6-bg.jpg) no-repeat;
+	background-size: cover;	
+	color: #3c3535;
+}
+
+
 
 
 
