--- a/app/styles/_bg-video.scss
+++ b/app/styles/_bg-video.scss
@@ -1,17 +1,31 @@
 
 video { 
-    position: fixed;
+    /*position: fixed;
     top: 50%;
     left: 50%;
     min-width: 100%;
     min-height: 100%;
     width: auto;
-    height: auto;
+    height: 100%;
     z-index: -100;
     transform: translateX(-50%) translateY(-50%);
  	background: url('//demosthenes.info/assets/images/polina.jpg') no-repeat;
   background-size: cover;
-  transition: 1s opacity;
+  transition: 1s opacity;*/
+	position: absolute;
+    right: 0;
+    bottom: 0;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background-size: 100% 100%;
+    background-color: black;
+    //background-image: /* our video */;
+    background-position: center center;
+    background-size: contain;
+    object-fit: cover;
+    z-index: 3;
 }
 .stopfade { 
    
@@ -37,9 +51,7 @@ video {
 
 
 
-@media screen and (max-width: 500px) { 
-  div{width:70%;} 
-}
+
 /*@media screen and (max-device-width: 800px) {
   html { background: url(https://thenewcode.com/assets/images/polina.jpg) #000 no-repeat center center fixed; }
   #bgvid { display: none; }
