--- a/app/styles/_max-767.scss
+++ b/app/styles/_max-767.scss
@@ -8,6 +8,119 @@ $blue-color: #3c4f90;
 
 @media only screen and (max-width: 767px) {
 
+	.nav-buttons {
+		&__list {
+			display: none;
+		}
+	}
 
+.nav {
+
+	&__list {
+		max-width: 100%;
+	}
+	&__item {
+		a {
+			font-size: 18px;
+		}
+
+		&:after {
+			padding: 0 10px;
+		}
+	}
+}
+
+	.title {
+		font-size: 40px;
+
+		&__md {
+				font-size: 30px;
+		}
+
+			&__sm {
+				font-size: 24px;
+		}
+	}
+
+
+	.subtitle {
+		font-size: 20px;
+	}
+
+	.text {
+		font-size: 18px;
+
+		&__lg {
+			font-size: 20px;
+		}
+
+		&__italic {
+			font-size: 18px;
+		}
+
+	}
+
+	.button {
+		font-size: 24px;		
+		
+	}
+
+	.logo-wrap {
+		width: 100px;
+		width: 150px;
+	}
+
+	//section-3
+
+	.icon {
+    margin-bottom: 10px;
+		height: 160px;		
+	}
+
+	.timer {
+		bottom: 25px;		
+    font-size: 40px;
+		bottom: 35px;
+	}
+
+	.dohots {
+		&__list {
+			margin: 0;
+		}
+	}
+
+	//section-5 
+
+		.column {
+
+		&__wrap {
+			display: flex;
+			width: 100%;
+			height: 100%;
+			align-items: center;
+			justify-content: space-between;
+		}
+
+		&__left {
+			width: calc(50% - 20px);
+			flex-basis: auto;  
+			margin-right: 20px;  
+			margin-bottom: 0;
+			flex-shrink: 0;
+			height: 100%;
+		}
+
+		&__right {
+			//width: 390px;
+			width: calc(50% - 20px);
+			margin-left: 20px;
+		}
+	}
+
+	.img-wrap-border {
+		width: 200px;
+		height: 200px;
+	}
 
 }
+
