--- a/app/styles/_page.scss
+++ b/app/styles/_page.scss
@@ -50,6 +50,10 @@ body {
 	justify-content: space-between;
 	padding: 30px 0;
 	align-items: center;
+
+	&__no-padding {
+		padding: 0;
+	}
 }
 
 .content {
@@ -108,37 +112,48 @@ body {
 	margin-bottom: 30px;
 }
 
-.nav-buttons {
+#fp-nav {
 
-	&__list {
-		width: 22px;
-		height: 260px;
-		position: fixed;
-		right: 88px;
-		top: 50%;
-		margin-top: -130px;
-		z-index: 5;
+	&.right {
+	right: 88px;
+	width: 22px;
+	height: 260px;
+			
+	top: 50%;
+	margin-top: -130px;
+	z-index: 5;
+	}
+	
 
+	ul {
+		width: 100%;
 		display: flex;
 		flex-direction: column;
 		justify-content: space-between;
-	}
 
-	&__item {
-		width: 100%;
-		height: 22px;
-		border: 4px solid #fff;
-		border-radius: 50%;
-
-		a {
-			display: inline-block;
+			li {
 			width: 100%;
-			height: 100%;
-		}
+			height: 22px;
+			border: 4px solid #fff;
+			border-radius: 50%;
 
-			&.button-active {
-			background: #ff0000;		
-		}			
+			a {
+				display: inline-block;
+				width: 100%;
+				height: 100%;
+
+				border-radius: 50%;
+    		vertical-align: top;
+
+				&.active {
+				background: #ff0000;		
+				}	
+
+				span {
+					background: none;
+				}	
+			}				
+		}
 	}
 }
 
@@ -476,8 +491,224 @@ body {
 }
 
 
+//section-7
+
+.section-7 {
+	
+}
+
+//slider
+
+.popup-gallery {
+		display: flex;
+		flex-wrap: wrap;
+		height: 100vh;
+
+		a {
+				display: block;
+				width: 33.33%;			
+				height: 33.33%;
+				position: relative;		
+			
+
+			img {
+					width: 100%;
+					min-height: 100%;
+					-o-object-fit: cover;
+					object-fit: cover;
+			}
+
+		}
+
+		&__title-block {
+			background: #383433;
+			width: 100%;
+			height: 100%;
+			color: #fff;
+
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			flex-direction: column;
+			cursor: default;
+		}
+		
+	}    
 
 
 
+/*.mfp-title {   
+    font-weight: 700;
+    font-size: 24px;
+    text-align: center;
+    margin-top: 30px;
+
+    small {       
+        font-size: 14px;
+        line-height: 1.5em;
+        font-weight: 400;
+        margin-top: 10px;
+        max-height: 100px;
+        overflow: hidden;
+        display: block;
+    }
+
+   
+}*/
+
+.mfp-arrow-left {
+
+    &:after {
+        content: "←";
+        display: inline-block;
+        font-size: 65px;
+        color: #fff;
+        border: none;
+        margin-top: 0;
+        margin-left: 17px;;
+        
+    }
+
+    &:before {
+       content: "";
+        border: none;
+        margin: 0; 
+    }
+}
+
+.mfp-arrow-right {
+
+    &:after {
+        content: "→";
+        display: inline-block;
+        font-size: 65px;
+        color: #fff;
+        border: none;
+       margin-top: 0;
+        margin-left: 0;
+    }
+
+    &:before {
+       content: "";
+        border: none;
+        margin: 0; 
+    }   
+
+}
+
+.mfp-zoom-out-cur, .mfp-zoom-out-cur .mfp-image-holder .mfp-close {
+     cursor: pointer; 
+}
+
+.video-wrap {
+    display: none;
+}
+
+.mfp-container .video-wrap {
+    display: block;
+}
+
+.mfp-content video {
+	position: static;
+   width: auto;
+    max-width: 100%;
+    height: auto;
+    max-height: 100%;
+    display: block;
+    line-height: 0;
+    box-sizing: border-box;
+    padding: 40px 0;
+    margin: 0 auto;
+}
+
+/*.video-wrap  .mfp-close {
+    color: #FFF;
+    right: -6px;
+    text-align: right;
+    padding-right: 6px;  
+}*/
+
+.video-slide {
+	position: relative;
+
+	&:after {
+		content: "";
+		background: url(../images/play-icon.png);
+		width: 138px;
+		height: 138px;
+		background-size: cover;
+
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		margin-top: -69px;
+		margin-left: -69px;
+		z-index: 10;
+	}
+}
+
+.mfp-close-btn-in .mfp-close {
+	color: #fff;
+}
+
+
+//section-8
+
+.section-8 {
+	background: #3a3534;
+}
+
+.news {
+
+	&__list {
+		display: flex;
+		margin: 0 -20px;
+		flex-wrap: wrap;
+		height: 80%;    
+	}
+
+	&__item {
+		display: inline-block;
+		width: calc(33.33% - 40px);
+		margin: 0 20px 15px 20px;
+
+		&:hover {
+
+			img {			
+				transform: scale(1.1);				
+				transition: all .5s;
+			}
+
+			.news-text {
+				text-decoration: underline;
+			}
+		}
+
+		&:not(:hover) {
+
+			img {
+				transition: all .5s;
+			}			
+		}
+
+		.img-wrap {
+			width: 100%;
+			max-height: 185px;
+		}
+	}
+}
+
+.news-text {
+	font-size: 20px;
+	font-weight: 100;
+	color: #fff;
+	text-align: center;
+	margin-top: 15px;
+}
+
+.morelink {
+		color: #fff;
+		text-decoration: underline;
+}
 
 
