--- a/app/styles/_max-767.scss
+++ b/app/styles/_max-767.scss
@@ -144,6 +144,20 @@ $blue-color: #3c4f90;
 		margin-top: 7px;
 	}
 
+	//section-9 footer
+
+	//section-9 footer
+
+	.footer {	
+
+		&__left-column {
+			margin-bottom: 10px;
+		}
+
+		&__text {		
+			margin-top: 10px;
+		}
+	}
 }
 
 
