--- a/app/styles/_page.scss
+++ b/app/styles/_page.scss
@@ -711,4 +711,137 @@ body {
 		text-decoration: underline;
 }
 
+//section-9
 
+.section-9 {
+	background: #fff;
+	color: #3c3535;
+}
+
+.footer {
+
+	&__wrap {
+		display: flex;
+		flex-wrap: wrap;
+		width: 100%;
+		height: 100%;
+		align-items: center;
+		margin: 0 -20px;
+	}
+
+	&__left-column {
+		width: calc(50% - 40px);
+		margin: 0 20px;
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: space-between;
+	}
+
+	&__right-column {
+		width: calc(50% - 40px);
+		margin: 0 20px;		
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: space-between;
+	}
+
+	&__text {
+		width: 100%;
+		font-size: 16px;
+		color: #3c3535;
+		font-weight: 100;
+		margin-top: 50px;
+	}
+}
+
+.social {
+
+	&__list {
+		display: flex;
+	//	align-items: center;
+		margin-right: 20px;
+	}
+
+	&__item {
+		width: 40px;
+		height: 40px;
+		margin-right: 15px;
+
+		a {
+			display: inline-block;
+			width: 100%;
+			height: 100%;
+		}
+
+		img {
+			width: 100%;
+		}
+
+		&:last-child {
+			margin-right: 0;
+		}
+	}
+}
+
+.banner {
+
+	&__block {
+		display: flex;
+		flex-wrap: wrap;
+
+		.img-wrap {
+			margin: 0 15px 15px 15px;
+
+				&:first-child {
+				margin-left: 0;
+			}		
+		}
+		
+	}
+
+}
+
+.contacts-block {
+	width: 48%;
+}
+
+.other-block {
+	width: 48%;
+}
+
+.thin-title {
+	font-size: 20px;
+	margin-bottom: 15px;
+	font-weight: 100;
+	color: #3c3535;
+	text-decoration: underline;
+
+	&__link {
+		display: inline-block;
+		font-size: 20px;
+		margin-bottom: 15px;
+		font-weight: 100;
+		color: #3c3535;
+		text-decoration: underline;
+
+		&:hover {
+			text-decoration: none;
+		}
+	}
+}
+
+.contact-text {
+	font-size: 18px;
+	font-weight: 100;
+	color: #3c3535;
+
+	&__link {
+		display: block;
+		color: #3c3535;
+		margin-bottom: 5px;
+
+		&:hover {
+			text-decoration: underline;
+		}
+	}
+}
